--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform
 .terraform.lock.hcl
+
+# Lambda deployment packages
+*.zip
