feat: cdn with link shortener

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,20 @@
-# Cloudflare Account
-CLOUDFLARE_ACCOUNT_ID=your-cloudflare-account-id
+# AWS Configuration
+AWS_REGION=eu-west-2
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 
-# R2 Bucket (for local development)
-# In production, the Worker uses R2 bindings directly
-R2_BUCKET_NAME=lho-cdn
-R2_API_TOKEN=your-r2-api-token
+# S3 Storage
+S3_BUCKET_NAME=lho-cdn
 
-# D1 Database (for local development)
-# In production, the Worker uses D1 bindings directly
-D1_DATABASE_ID=your-d1-database-id
-D1_API_TOKEN=your-d1-api-token
+# DynamoDB (for short links)
+DYNAMODB_TABLE_NAME=lho-cdn-links
 
-# Public CDN URL (your custom domain)
-NEXT_PUBLIC_CDN_URL=https://cdn.lhowsam.com
+# Public URLs
+# CDN URL - Assets served via Vercel /cdn route (S3 bucket stays private)
+NEXT_PUBLIC_CDN_URL=https://cdn-viewer.lhowsam.com/cdn
+# Admin URL - Vercel site for the viewer/admin interface (used for short links)
+NEXT_PUBLIC_ADMIN_URL=https://cdn-viewer.lhowsam.com
+
+# Basic Auth for admin API (optional)
+BASIC_AUTH_USER=admin
+BASIC_AUTH_PASSWORD=your-password
