--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -10,7 +10,7 @@ runs:
     - name: Setup Bun
       uses: oven-sh/setup-bun@v2
       with:
-        bun-version: "1.1.0"
+        bun-version-file: .bun-version
 
     - name: Install dependencies
       shell: bash
