--- a/package.json
+++ b/package.json
@@ -7,20 +7,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --max-warnings 0",
-    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
-    "d1:init": "echo 'Run: wrangler d1 execute <db-name> --command \"CREATE TABLE IF NOT EXISTS links (shortCode TEXT PRIMARY KEY, longUrl TEXT NOT NULL, createdAt TEXT NOT NULL); CREATE INDEX IF NOT EXISTS idx_links_createdAt ON links(createdAt);\"'"
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@opennextjs/cloudflare": "^1.0.0-beta",
+    "@aws-sdk/client-dynamodb": "^3.980.0",
+    "@aws-sdk/client-s3": "^3.980.0",
+    "@aws-sdk/lib-dynamodb": "^3.980.0",
     "next": "^16.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250124.0",
     "@eslint/compat": "^2.0.2",
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.2",
@@ -42,7 +39,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5",
-    "typescript-eslint": "^8.54.0",
-    "wrangler": "^4.0.0"
+    "typescript-eslint": "^8.54.0"
   }
 }
